--- a/17.09/Dockerfile
+++ b/17.09/Dockerfile
@@ -4,7 +4,7 @@ ENV DOCKER_VERSION 17.09.1-ce
 
 RUN apk add --no-cache curl && \
     set -x && \
-    curl -L -o /tmp/docker-${DOCKER_VERSION}.tgz https://get.docker.com/builds/Linux/x86_64/docker-${DOCKER_VERSION}.tgz && \
+    curl -L -o /tmp/docker-${DOCKER_VERSION}.tgz https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKER_VERSION}.tgz && \
     tar -xz -C /tmp -f /tmp/docker-${DOCKER_VERSION}.tgz && \
     mv /tmp/docker/* /usr/bin
 
